[SYCL] Prototype of invoke_simd API and necessary dependencies.
Contributions from Roland Schulz (@rolandschulz).

Signed-off-by: kbobrovs <Konstantin.S.Bobrovsky@intel.com>

--- a/sycl/CMakeLists.txt
+++ b/sycl/CMakeLists.txt
@@ -123,6 +123,7 @@ add_custom_command(
           ${HEADERS_IN_CL_DIR}
   COMMAND ${CMAKE_COMMAND} -E copy_directory ${sycl_inc_dir}/sycl ${SYCL_INCLUDE_BUILD_DIR}/sycl
   COMMAND ${CMAKE_COMMAND} -E copy_directory ${sycl_inc_dir}/CL ${SYCL_INCLUDE_BUILD_DIR}/sycl/CL
+  COMMAND ${CMAKE_COMMAND} -E copy_directory ${sycl_inc_dir}/std ${SYCL_INCLUDE_BUILD_DIR}/std
   COMMENT "Copying SYCL headers ...")
 
 # Copy SYCL headers from source to install directory
