--- a/sycl/include/CL/sycl/feature_test.hpp.in
+++ b/sycl/include/CL/sycl/feature_test.hpp.in
@@ -10,6 +10,7 @@
 __SYCL_INLINE_NAMESPACE(cl) {
 namespace sycl {
 
+#define SYCL_BACKEND_OPENCL 1
 // Feature test macro definitions
 
 // TODO: Move these feature-test macros to compiler driver.
@@ -29,6 +30,18 @@ namespace sycl {
 #define SYCL_EXT_INTEL_MEM_CHANNEL_PROPERTY 1
 #define SYCL_EXT_INTEL_USM_ADDRESS_SPACES 1
 #define SYCL_EXT_ONEAPI_BACKEND_LEVEL_ZERO 1
+#cmakedefine01 SYCL_BUILD_PI_CUDA
+#if SYCL_BUILD_PI_CUDA
+#define SYCL_EXT_ONEAPI_BACKEND_CUDA 1
+#endif
+#cmakedefine01 SYCL_BUILD_PI_ESIMD_EMULATOR
+#if SYCL_BUILD_PI_ESIMD_EMULATOR
+#define SYCL_EXT_INTEL_BACKEND_ESIMD_EMULATOR 1
+#endif
+#cmakedefine01 SYCL_BUILD_PI_HIP
+#if SYCL_BUILD_PI_HIP
+#define SYCL_EXT_ONEAPI_BACKEND_HIP 1
+#endif
 
 } // namespace sycl
 } // __SYCL_INLINE_NAMESPACE(cl)
