--- a/xptifw/samples/syclpi_collector/CMakeLists.txt
+++ b/xptifw/samples/syclpi_collector/CMakeLists.txt
@@ -7,7 +7,7 @@ target_link_libraries(xpti_syclpi_collector PRIVATE
 )
 target_include_directories(xpti_syclpi_collector PRIVATE
   ${XPTIFW_DIR}/include
-  ${XPTI_DIR}/include/xpti/
+  ${XPTI_DIR}/include
   ${XPTIFW_DIR}/samples/include
 )
 
