--- a/sycl/plugins/CMakeLists.txt
+++ b/sycl/plugins/CMakeLists.txt
@@ -19,6 +19,6 @@ add_subdirectory(level_zero)
 # environment
 if (NOT MSVC)
   if (SYCL_BUILD_PI_ESIMD_EMULATOR)
-    add_subdirectory(esimd_cpu)
+    add_subdirectory(esimd_emulator)
   endif()
 endif()
