[SYCL][PI] New device information descriptors: max_global_work_groups and max_work_groups (#4064)
SYCL currently does not provide a way to query a device to get the maximum **number of work groups** that can be submitted in each dimension as well as the number of work groups that can be submitted across all the dimensions.
This query does not exist in openCL, but now that GPU are offered through the PI, this query becomes more relevant as different vendors/devices have their own limits.

This commit implements the feature for the host device, level-zero, openCL, ROCm and CUDA. If the query is not applicable, the maximum acceptable value is returned.

Descriptors added:
 - ext_oneapi_max_global_work_groups
 - ext_oneapi_max_work_groups_1d
 - ext_oneapi_max_work_groups_2d
 - ext_oneapi_max_work_groups_3d

Feature test macro:
 - SYCL_EXT_ONEAPI_MAX_WORK_GROUP_QUERY defined to 1

Signed-off-by: Michel Migdal <michel.migdal@codeplay.com>

--- a/sycl/include/CL/sycl/feature_test.hpp.in
+++ b/sycl/include/CL/sycl/feature_test.hpp.in
@@ -42,6 +42,7 @@ namespace sycl {
 #if SYCL_BUILD_PI_HIP
 #define SYCL_EXT_ONEAPI_BACKEND_HIP 1
 #endif
+#define SYCL_EXT_ONEAPI_MAX_WORK_GROUP_QUERY 1
 
 } // namespace sycl
 } // __SYCL_INLINE_NAMESPACE(cl)
