--- a/sycl/include/CL/sycl/feature_test.hpp.in
+++ b/sycl/include/CL/sycl/feature_test.hpp.in
@@ -11,7 +11,6 @@ __SYCL_INLINE_NAMESPACE(cl) {
 namespace sycl {
 
 #define SYCL_BACKEND_OPENCL 1
-#include <CL/sycl/backend/opencl.hpp>
 
 // Feature test macro definitions
 
@@ -32,11 +31,9 @@ namespace sycl {
 #define SYCL_EXT_INTEL_MEM_CHANNEL_PROPERTY 1
 #define SYCL_EXT_INTEL_USM_ADDRESS_SPACES 1
 #define SYCL_EXT_ONEAPI_BACKEND_LEVEL_ZERO 1
-#include <CL/sycl/backend/level_zero.hpp>
 #cmakedefine01 SYCL_BUILD_PI_CUDA
 #if SYCL_BUILD_PI_CUDA
 #define SYCL_EXT_ONEAPI_BACKEND_CUDA 1
-#include <CL/sycl/backend/cuda.hpp>
 #endif
 #cmakedefine01 SYCL_BUILD_PI_ESIMD_EMULATOR
 #if SYCL_BUILD_PI_ESIMD_EMULATOR
@@ -50,3 +47,12 @@ namespace sycl {
 
 } // namespace sycl
 } // __SYCL_INLINE_NAMESPACE(cl)
+
+#include <CL/sycl/backend/opencl.hpp>
+// Level Zero backend header depeneds on external headers and should be
+// included by user application directly
+// #include <sycl/ext/oneapi/backend/level_zero.hpp>
+
+#if SYCL_EXT_ONEAPI_BACKEND_CUDA
+#include <CL/sycl/backend/cuda.hpp>
+#endif
