--- a/sycl/tools/CMakeLists.txt
+++ b/sycl/tools/CMakeLists.txt
@@ -4,12 +4,6 @@ if (SYCL_ENABLE_XPTI_TRACING)
   add_subdirectory(pi-trace)
 endif()
 
-# TODO: move each tool in its own sub-directory
-add_executable(get_device_count_by_type get_device_count_by_type.cpp)
-add_dependencies(get_device_count_by_type
-  level-zero-loader
-)
-
 if(MSVC)
   set(LEVEL_ZERO_LIBRARY
     "${LLVM_LIBRARY_OUTPUT_INTDIR}/${CMAKE_STATIC_LIBRARY_PREFIX}ze_loader${CMAKE_STATIC_LIBRARY_SUFFIX}")
@@ -18,8 +12,17 @@ else()
     "${LLVM_LIBRARY_OUTPUT_INTDIR}/${CMAKE_SHARED_LIBRARY_PREFIX}ze_loader${CMAKE_SHARED_LIBRARY_SUFFIX}")
 endif()
 
-target_link_libraries(get_device_count_by_type
-  PRIVATE
+# TODO: move each tool in its own sub-directory
+add_sycl_executable(get_device_count_by_type
+  SOURCES
+    get_device_count_by_type.cpp
+  COMPILE_DEFINITIONS
+    $<$<BOOL:${SYCL_BUILD_PI_CUDA}>:USE_PI_CUDA>
+    $<$<BOOL:${SYCL_BUILD_PI_HIP}>:USE_PI_HIP>
+    # For HIP set defines depending on the platform
+    $<$<AND:$<BOOL:${SYCL_BUILD_PI_HIP}>,$<STREQUAL:${SYCL_BUILD_PI_HIP_PLATFORM},AMD>>:__HIP_PLATFORM_AMD__>
+    $<$<AND:$<BOOL:${SYCL_BUILD_PI_HIP}>,$<STREQUAL:${SYCL_BUILD_PI_HIP_PLATFORM},NVIDIA>>:__HIP_PLATFORM_NVIDIA__>
+  LINK
     OpenCL-Headers
     LevelZeroLoader::Headers
     OpenCL-ICD
@@ -31,13 +34,8 @@ target_link_libraries(get_device_count_by_type
     # The HIP for NVIDIA plugin also needs cudart
     $<$<AND:$<BOOL:${SYCL_BUILD_PI_HIP}>,$<STREQUAL:${SYCL_BUILD_PI_HIP_PLATFORM},NVIDIA>>:cudart>
 )
-target_compile_definitions(get_device_count_by_type
-  PRIVATE
-    $<$<BOOL:${SYCL_BUILD_PI_CUDA}>:USE_PI_CUDA>
-    $<$<BOOL:${SYCL_BUILD_PI_HIP}>:USE_PI_HIP>
-    # For HIP set defines depending on the platform
-    $<$<AND:$<BOOL:${SYCL_BUILD_PI_HIP}>,$<STREQUAL:${SYCL_BUILD_PI_HIP_PLATFORM},AMD>>:__HIP_PLATFORM_AMD__>
-    $<$<AND:$<BOOL:${SYCL_BUILD_PI_HIP}>,$<STREQUAL:${SYCL_BUILD_PI_HIP_PLATFORM},NVIDIA>>:__HIP_PLATFORM_NVIDIA__>
+add_dependencies(get_device_count_by_type
+  level-zero-loader
 )
 
 if(SYCL_BUILD_PI_HIP)
@@ -45,3 +43,4 @@ if(SYCL_BUILD_PI_HIP)
     PRIVATE
     ${SYCL_BUILD_PI_HIP_INCLUDE_DIR})
 endif()
+
