--- a/sycl/tools/sycl-ls/CMakeLists.txt
+++ b/sycl/tools/sycl-ls/CMakeLists.txt
@@ -1,17 +1,23 @@
-add_executable(sycl-ls sycl-ls.cpp)
-add_dependencies(sycl-ls sycl)
-target_include_directories(sycl-ls PRIVATE "${sycl_inc_dir}")
-
 set(sycl_lib sycl)
 string(TOLOWER "${CMAKE_BUILD_TYPE}" build_type_lower)
 if (WIN32 AND "${build_type_lower}" MATCHES "debug")
   set(sycl_lib sycld)
 endif()
 
-target_link_libraries(sycl-ls
-  PRIVATE
+add_sycl_executable(sycl-ls
+  SOURCES
+    sycl-ls.cpp
+  INCLUDES
+    "${sycl_inc_dir}"
+  LINK
     ${sycl_lib}
     OpenCL-Headers
 )
+add_dependencies(sycl-ls sycl)
+
 install(TARGETS sycl-ls
   RUNTIME DESTINATION "bin" COMPONENT sycl-ls)
+add_llvm_install_targets(install-sycl-ls
+  DEPENDS sycl-ls
+  COMPONENT level-zero-headers
+)
