--- a/sycl/tools/sycl-ls/CMakeLists.txt
+++ b/sycl/tools/sycl-ls/CMakeLists.txt
@@ -1,16 +1,10 @@
-set(sycl_lib sycl)
-string(TOLOWER "${CMAKE_BUILD_TYPE}" build_type_lower)
-if (WIN32 AND "${build_type_lower}" MATCHES "debug")
-  set(sycl_lib sycld)
-endif()
-
 add_sycl_executable(sycl-ls
   SOURCES
     sycl-ls.cpp
   INCLUDES
     "${sycl_inc_dir}"
   LINK
-    ${sycl_lib}
+    sycl-runtime
     OpenCL-Headers
 )
 add_dependencies(sycl-ls sycl)
