--- a/sycl/include/CL/sycl/feature_test.hpp.in
+++ b/sycl/include/CL/sycl/feature_test.hpp.in
@@ -49,7 +49,7 @@ namespace sycl {
 } // __SYCL_INLINE_NAMESPACE(cl)
 
 #include <CL/sycl/backend/opencl.hpp>
-// Level Zero backend header depeneds on external headers and should be
+// Level Zero backend header depends on external headers and should be
 // included by user application directly
 // #include <sycl/ext/oneapi/backend/level_zero.hpp>
 
