--- a/sycl/include/CL/sycl/feature_test.hpp.in
+++ b/sycl/include/CL/sycl/feature_test.hpp.in
@@ -10,6 +10,12 @@
 __SYCL_INLINE_NAMESPACE(cl) {
 namespace sycl {
 
+#ifdef __clang__
+#ifndef __has_extension
+#define __has_extension(x) 0
+#endif
+#endif
+
 #define SYCL_BACKEND_OPENCL 1
 
 // Feature test macro definitions
@@ -26,8 +32,29 @@ namespace sycl {
 #ifndef SYCL_EXT_ONEAPI_MATRIX
 #define SYCL_EXT_ONEAPI_MATRIX 2
 #endif
-#define SYCL_EXT_INTEL_BF16_CONVERSION 1
+#define SYCL_EXT_ONEAPI_ASSERT 1
 #define SYCL_EXT_ONEAPI_ENQUEUE_BARRIER 1
+#define SYCL_EXT_ONEAPI_FREE_FUNCTION_QUERIES 1
+#ifndef __DISABLE_SYCL_ONEAPI_GROUP_ALGORITHMS__
+#define SYCL_EXT_ONEAPI_GROUP_ALGORITHMS 1
+#endif
+#define SYCL_EXT_ONEAPI_GROUP_SORT 1
+#define SYCL_EXT_ONEAPI_LOCAL_MEMORY 1
+#define SYCL_EXT_ONEAPI_MAX_WORK_GROUP_QUERY 1
+#define SYCL_EXT_ONEAPI_ND_RANGE_REDUCTIONS 1
+#define SYCL_EXT_ONEAPI_DEFAULT_CONTEXT 1
+#define SYCL_EXT_ONEAPI_USE_PINNED_HOST_MEMORY_PROPERTY 1
+#define SYCL_EXT_ONEAPI_SUB_GROUP 1
+#define SYCL_EXT_INTEL_BF16_CONVERSION 1
+#define SYCL_EXT_INTEL_BITCAST 1
+#define SYCL_EXT_INTEL_DATAFLOW_PIPES 1
+#if __has_extension(sycl_extended_atomics)
+#define SYCL_EXT_INTEL_EXTENDED_ATOMICS 1
+#endif
+#define SYCL_EXT_INTEL_FPGA_DEVICE_SELECTOR 1
+#define SYCL_EXT_INTEL_FPGA_LSU 1
+#define SYCL_EXT_INTEL_FPGA_REG 1
+#define SYCL_EXT_INTEL_KERNEL_ARGS_RESTRICT 1
 #define SYCL_EXT_INTEL_MEM_CHANNEL_PROPERTY 1
 #define SYCL_EXT_INTEL_USM_ADDRESS_SPACES 1
 #define SYCL_EXT_ONEAPI_BACKEND_LEVEL_ZERO 1
@@ -43,7 +70,6 @@ namespace sycl {
 #if SYCL_BUILD_PI_HIP
 #define SYCL_EXT_ONEAPI_BACKEND_HIP 1
 #endif
-#define SYCL_EXT_ONEAPI_MAX_WORK_GROUP_QUERY 1
 
 } // namespace sycl
 } // __SYCL_INLINE_NAMESPACE(cl)
