--- a/sycl/include/CL/sycl/feature_test.hpp.in
+++ b/sycl/include/CL/sycl/feature_test.hpp.in
@@ -11,6 +11,7 @@ __SYCL_INLINE_NAMESPACE(cl) {
 namespace sycl {
 
 #define SYCL_BACKEND_OPENCL 1
+
 // Feature test macro definitions
 
 // TODO: Move these feature-test macros to compiler driver.
@@ -46,3 +47,12 @@ namespace sycl {
 
 } // namespace sycl
 } // __SYCL_INLINE_NAMESPACE(cl)
+
+#include <CL/sycl/backend/opencl.hpp>
+// Level Zero backend header depends on external headers and should be
+// included by user application directly
+// #include <sycl/ext/oneapi/backend/level_zero.hpp>
+
+#if SYCL_EXT_ONEAPI_BACKEND_CUDA
+#include <CL/sycl/backend/cuda.hpp>
+#endif
