--- a/sycl/include/CL/sycl/feature_test.hpp.in
+++ b/sycl/include/CL/sycl/feature_test.hpp.in
@@ -47,7 +47,7 @@ namespace sycl {
 #define SYCL_EXT_INTEL_BF16_CONVERSION 1
 #define SYCL_EXT_INTEL_BITCAST 1
 #define SYCL_EXT_INTEL_DATAFLOW_PIPES 1
-#if __has_extension(sycl_extended_atomics)
+#if defined(__clang__) && defined(__has_extension(sycl_extended_atomics))
 #define SYCL_EXT_INTEL_EXTENDED_ATOMICS 1
 #endif
 #define SYCL_EXT_INTEL_FPGA_DEVICE_SELECTOR 1
