--- a/sycl/include/CL/sycl/feature_test.hpp.in
+++ b/sycl/include/CL/sycl/feature_test.hpp.in
@@ -54,5 +54,5 @@ namespace sycl {
 // #include <sycl/ext/oneapi/backend/level_zero.hpp>
 
 #if SYCL_EXT_ONEAPI_BACKEND_CUDA
-#include <CL/sycl/backend/cuda.hpp>
+#include <sycl/ext/oneapi/backend/cuda.hpp>
 #endif
