--- a/.github/workflows/sycl_linux_build_and_test.yml
+++ b/.github/workflows/sycl_linux_build_and_test.yml
@@ -121,6 +121,7 @@ jobs:
         # run scripts. It also overrides default entry point for containers.
         # Below is a workaround, that switches users for tests.
         chown -R sycl:sycl $GITHUB_WORKSPACE
+        chown -R sycl:sycl $TMPDIR
         su -c "cmake --build $GITHUB_WORKSPACE/build --target check-llvm" sycl
     - name: check-clang
       if: always()
