--- a/.github/workflows/sycl_linux_build_and_test.yml
+++ b/.github/workflows/sycl_linux_build_and_test.yml
@@ -117,10 +117,14 @@ jobs:
     # TODO allow to optionally disable in-tree checks
     - name: check-llvm
       if: always()
+      env:
+        LIT_PRESERVES_TMP: 1
       run: |
         cmake --build $GITHUB_WORKSPACE/build --target check-llvm
     - name: check-clang
       if: always()
+      env:
+        LIT_PRESERVES_TMP: 1
       run: |
         cmake --build $GITHUB_WORKSPACE/build --target check-clang
     - name: check-sycl
