export instead of env

--- a/.github/workflows/sycl_linux_build_and_test.yml
+++ b/.github/workflows/sycl_linux_build_and_test.yml
@@ -122,9 +122,8 @@ jobs:
         cmake --build $GITHUB_WORKSPACE/build --target check-llvm
     - name: check-clang
       if: always()
-      env:
-        XDG_CACHE_HOME: ${{ github.workspace }}/os_cache
       run: |
+        export XDG_CACHE_HOME=$GITHUB_WORKSPACE/os_cache
         cmake --build $GITHUB_WORKSPACE/build --target check-clang
     - name: check-sycl
       if: always()
