--- a/.github/workflows/sycl_linux_build_and_test.yml
+++ b/.github/workflows/sycl_linux_build_and_test.yml
@@ -44,6 +44,10 @@ on:
       build_artifact_suffix:
         type: string
         required: true
+      build_upload_artifact:
+        type: boolean
+        required: false
+        default: false
 
 jobs:
   configure:
@@ -67,7 +71,8 @@ jobs:
               \"build_cache_suffix\":\"default\",
               \"build_cache_size\":\"2G\",
               \"build_configure_extra_args\":\"\",
-              \"build_artifact_suffix\":\"default\"
+              \"build_artifact_suffix\":\"default\",
+              \"build_upload_artifact\":\"false\"
             }"
           fi
           INPUTS="${INPUTS//'%'/'%25'}"
@@ -104,7 +109,6 @@ jobs:
         CACHE_SIZE: ${{ fromJSON(needs.configure.outputs.params).build_cache_size }}
         ARGS: ${{ fromJSON(needs.configure.outputs.params).build_configure_extra_args }}
       run: |
-        mkdir -p $GITHUB_WORKSPACE/os_cache
         mkdir -p $CACHE_ROOT/build_cache_$CACHE_SUFFIX
         mkdir -p $GITHUB_WORKSPACE/build
         cd $GITHUB_WORKSPACE/build
@@ -138,11 +142,14 @@ jobs:
       run: |
         cmake --build $GITHUB_WORKSPACE/build --target check-xptifw
     - name: Install
+      if: ${{ steps.parameters.build_upload_artifact }}
       run: cmake --build $GITHUB_WORKSPACE/build --target install
     - name: Pack
-      run: tar -czvf llvm_sycl.tar.gz -C $GITHUB_WORKSPACE/build/install .
+      if: ${{ steps.parameters.build_upload_artifact }}
+      run: tar -czf llvm_sycl.tar.gz -C $GITHUB_WORKSPACE/build/install .
     - name: Upload artifacts
       uses: actions/upload-artifact@v1
+      if: ${{ steps.parameters.build_upload_artifact }}
       with:
         name: sycl_linux_${{ fromJSON(needs.configure.outputs.params).build_artifact_suffix }}
         path: llvm_sycl.tar.gz
